--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       type="text/css"
     />-->
     <!-- <script src="./assets/libs/jquery-3.7.1/jquery-3.7.1.min.js"></script> -->
-    <script src="./assets/libs/turnjs4/lib/turn.min.js"></script>
+    <!-- <script src="./assets/libs/turnjs4/lib/turn.min.js"></script> -->
     <script
       src="./assets/libs/dflip/js/libs/jquery.min.js"
       type="text/javascript"
